# llkjj_ml

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.py  CLAUDE.md  CLAUDE_CODE_BEST_PRACTICES.md  CLAUDE_CODE_IMPLEMENTATION_SUMMARY.md  CLAUDE_CODE_QUICKSTART.md  COPILOT_AGENT_MODE_IMPLEMENTATION.md  Dokumentation_human.md  Gemini_Vorschlag.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_NOTICE.md  PHASE2_COMPLETION_SUMMARY.md  PHASE_3_COMPLETION_REPORT.md  PYDANTIC_V2_ARCHITECTURE.md  Projektkontext01.md  Projektkontext02.md  README.md  TODO.md  TODO_VERIFICATION.md  Vorschlag.md  __init__.py  debug_docling_official.py  debug_table_1_official.csv  debug_table_2_official.csv  debug_tables.py  demo_docling_optimized.py  deployment_report_20250817_155402.json  docling_best_practices.py  docling_quality_analysis.py  gemini_analyse.md  llkjj_ml.code-workspace  llkjj_ml_plugin.py  llkjj_ml_plugin_v2.py  llms.txt  main.py  mypy.ini  mypy_new.ini  (+13 more)
.claude/agents/: german-nlp-specialist.md  ml-quality-assurance.md  performance-optimizer.md  python-accounting-architect.md
.claude/commands/: analyze-memory.md  primer.md  test-pdf-pipeline.md  validate-skr03.md
.claude/hooks/: log-tool-usage.sh
.gemini/: gemini.md
.github/: copilot-setup-steps.yml
.github/instructions/: config.instructions.md  copilot-instructions.md  memory.instruction.md  tests.instructions.md
.github/workflows/: ci-cd.yml  ci-mypy-pytest.yml  ci.yml
accounting_api/: __init__.py  models.py  services.py
archive/: processor_refactored.py
config/: Kontenplan.csv  skr03_elektro_mapping.yaml
database/: schema.sql
debug_output/: docling_output_Sonepar_test3.txt  error_analytics_dashboard_complete.html  gemini_enhanced_Sonepar_test3.json  performance_benchmarking_complete.html  pipeline_result_Sonepar_test3.json  production_monitoring_dashboard.json  production_monitoring_report.html  quick_wins_completion_report.html  rag_feedback_loop_complete.html
debug_output/final_test/: Sonepar_test3_gemini_result.json
deployment/: __init__.py  deploy-production.sh  environment.py  health_service.py  load_testing.py  monitoring.py  performance_benchmark.py  production_manager.py
deployment/config/: .env.development  .env.production  .env.staging  development.yaml  production.yaml  staging.yaml
docs/: PHASE3_COMPLETION_REPORT.md  Projektkontext02.md  TYPE_SAFETY_IMPROVEMENT_REPORT.md  architecture.md  context_aware_classification.md
llkjj_ml/: __init__.py
ml_service/: README.md  __init__.py  __main__.py  cli.py  config.py  processor.py
scripts/: generate_security_summary.py  monitor_performance.py  populate_rag_system.py  reset_chromadb.py  setup_spacy_models.py
src/: caching.py  cli.py  config.py  config_clean.py  settings_bridge.py  skr03_manager.py  trainer.py  training_data_persistence.py
src/classification/: skr03_classifier.py
src/config/: elektro_lieferanten.txt  gemini_extraction_prompt.txt  skr03_regeln.yaml  training_config.py
src/config/skr03/: skr03_regeln.yaml
src/database/: batch_processor.py  connection_pool.py  migrations.py  optimized_manager.py  simple_manager.py
src/embeddings/: sentence_transformer_provider.py
src/error_handling/: comprehensive_error_handler.py
src/extraction/: __init__.py  docling_invoice_processor.py  docling_processor.py  extractor.py  gemini_extractor.py  gemini_prompt.txt
src/features/: __init__.py  domain_extractors.py  elektro_ner.py  elektro_ner_simple.py.backup  layout_extractors.py  ml_integration.py  text_extractors.py
src/gemini/: direct_processor.py
src/integration/: backend_services.py  training_services.py
src/intelligence/: context_classifier.py.backup  feedback_api.py  feedback_learning.py  hybrid_intelligence.py
src/llkjj_ml/: __init__.py  __main__.py  caching.py  llkjj_ml_plugin_v2.py  package_api.py  settings_bridge.py  skr03_manager.py  trainer.py  training_data_persistence.py
src/llkjj_ml/config/: Debitoren.csv  Kontenplan copy.csv  Kontenplan.json  Kontenplan_Sachkonten.csv  Kreditoren.csv  __init__.py  kontengem.csv  skr03_regeln.yaml  training_config.py
src/llkjj_ml/database/: batch_processor.py  connection_pool.py  migrations.py  optimized_manager.py  simple_manager.py
src/llkjj_ml/embeddings/: __init__.py  sentence_transformer_provider.py  vector_embedding_service.py
src/llkjj_ml/error_handling/: __init__.py  comprehensive_error_handler.py
src/llkjj_ml/extraction/: __init__.py  docling_processor.py  extractor.py
src/llkjj_ml/features/: __init__.py  domain_extractors.py  layout_extractors.py  ml_integration.py  text_extractors.py
src/llkjj_ml/gemini/: __init__.py  direct_processor.py
src/llkjj_ml/integration/: __init__.py  backend_services.py  training_services.py
src/llkjj_ml/intelligence/: context_classifier.py  feedback_api.py  feedback_learning.py  hybrid_intelligence.py  mltesttask.md
src/llkjj_ml/models/: __init__.py  benchmark.py  processing_result.py  skr03.py  validation.py
src/llkjj_ml/monitoring/: cache_invalidation.py  cache_invalidation_manager.py  cache_warming_engine.py  (+3 more)
src/models/: __init__.py  benchmark.py  gemini_schemas.py  invoice.py  processing_result.py  validation.py
src/monitoring/: cache_invalidation.py  cache_invalidation_manager.py  cache_warming_engine.py  enhanced_batch_memory_manager.py  performance_benchmarking.py  performance_metrics.py
src/optimization/: apple_silicon_optimizer.py  batch_performance.py  cache_warming.py  gemini_rate_limiting.py  production_memory_manager.py
src/pipeline/: async_gemini_processor.py  async_processor.py  cached_processor.py  dual_pipeline.py  gemini_first_processor.py  gemini_strategy.py  invoice_processor.py  optimized_batch_processor.py  processing_strategy.py  processor.py  spacy_rag_strategy.py  unified_processor.py
src/processing/: __init__.py  classifier.py  extractor.py  modular_processor.py  quality.py
src/quality/: type_safety.py
src/security/: __init__.py  auditor.py  manager.py
src/utils/: resource_manager.py
stubs/: pydantic.pyi  pydantic_settings.pyi  pytest.pyi
(+29 files in other folders)
