[tool.poetry]
name = "llkjj_ml"
version = "0.1.0"
description = "Machine Learning Plugin für LLKJJ - KI-gestützte Finanzbuchhaltung"
authors = ["LLKJJ Team <info@llkjj.dev>"]
readme = "README.md"
packages = [{ include = "llkjj_ml", from = "src" }]

# NO dependencies here - all managed in workspace root!

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"